# dictionary-tui

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  DEVELOPMENT.md  LICENSE  PLAN.md  README.md  better-packs.md  pyproject.toml  rustfmt.toml
.cursor/rules/: rust-code-quality.mdc
.github/workflows/: app-release.yml  ci.yml  pack-release.yml  release.yml
docs/: DATA_AND_DISPLAY_DESIGN.md  DATA_ISSUES.md  DATA_SOURCES.md  KAIKKI_BEFORE_AFTER.md  KAIKKI_PARSING_DESIGN.md  KAIKKI_STRUCTURE.md  RUST_DATA_DESIGN.md
packs/: catalog.json
packs/cc-cedict/: manifest.json
packs/kaikki-en/: entries.jsonl  manifest.json
packs/kaikki-en-poc/: entries.jsonl  manifest.json
packs/kaikki-zh-en-poc/: entries.jsonl  manifest.json
packs/kaikki-zh-zh-poc/: entries.jsonl  manifest.json
packs/webster-1913/: entries.jsonl  manifest.json
packs/webster1913-en/: manifest.json
packs/wordnet/: manifest.json
packs/wordnet-pov/: entries.jsonl  manifest.json
packs/wordset-en/: manifest.json
packs/xinhua-zh-zh/: manifest.json
py/: ETL_DESIGN.md  README.md  __init__.py  ingest_cedict.py  ingest_webster1913.py  ingest_wordset.py  ingest_xinhua.py  kaikki.py  kaikki_ingest.py  pack_io.py  schema.py
py/cedict/: __init__.py  __main__.py  extractor.py  loader.py  transformers.py
py/common/: __init__.py  io.py  models.py
py/common/etl/: __init__.py  base.py  loader.py  transforms.py  utils.py
py/ingest/: README.md  __init__.py  io_utils.py  models.py
py/ingest/sources/: __init__.py  cedict.py  webster1913.py  wordset.py  xinhua.py
py/webster1913/: __init__.py  __main__.py  extractor.py  loader.py  transformers.py
py/xinhua/: __init__.py  __main__.py  extractor.py  loader.py  transformers.py
scripts/: build-pack-release.sh  demo.tape  ingest_cedict.py  ingest_kaikki_en.py  ingest_kaikki_poc.py  ingest_webster1913.py  ingest_wordnet.py  ingest_wordset.py  ingest_xinhua.py  inspect_kaikki_raw.py  record-demo.sh  release-app.sh  release-pack.sh  release-preflight.sh  set-version-from-tag.sh  show_kaikki_edge_examples.py
scripts/ingest/: README.md  __init__.py  io_utils.py  models.py
scripts/ingest/sources/: __init__.py  cedict.py  cmudict.py  kaikki.py  webster1913.py  wordnet.py  wordset.py  xinhua.py
src/: app.rs  cli.rs  config.rs  lib.rs  main.rs  pack.rs  pack_install.rs  provider.rs  schema.rs
tmp/: kaikki_en_structure_summary.txt  kaikki_zh_first_100_raw.jsonl  kaikki_zh_structure_summary.txt
