[package]
name = "dictionary-tui"
version = "0.1.2"
edition = "2021"
description = "Terminal UI for browsing dictionaries with page flips (English / Chinese)"
readme = "README.md"
license = "MIT"
authors = ["Joey Lou <joey99lou@gmail.com>"]
repository = "https://github.com/joey-lou/dictionary-tui"
homepage = "https://github.com/joey-lou/dictionary-tui"
keywords = ["dictionary", "tui", "chinese", "english", "terminal"]
categories = ["command-line-utilities"]
exclude = [
  "packs/*/entries.jsonl",
  "py/",
  "scripts/",
  "dist/",
  ".github/",
  ".pre-commit-config.yaml",
  ".cursor/",
  ".ruff_cache/",
  ".rtw/",
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
flate2 = "1.0"
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
ureq = { version = "3", features = ["rustls"] }

[dev-dependencies]
# Add when tests exist

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Groups need lower priority so per-lint "allow" overrides take effect (clippy 1.93+)
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Avoid noise on generated or boilerplate code
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
