[project]
name = "dictionary-tui-scripts"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["py"]

[tool.ruff.lint]
select = [
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
    "C4",    # flake8-comprehensions
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "RET",   # flake8-return
]
ignore = [
    "RUF001",  # ambiguous Unicode chars — intentional CJK in a dictionary project
    "RUF002",  # ambiguous Unicode in docstrings — same reason
    "RUF003",  # ambiguous Unicode in comments — same reason (pinyin, source typos)
]

[tool.ruff.lint.isort]
known-first-party = ["common", "cedict", "webster1913", "xinhua"]
